_includes/wiki.css
nav {
	min-width: 20ch;
	
	& > a:first-child {
		img {
			width: 10ch;
			height: 10ch;
			display: block;
			margin-left: auto;
			margin-right: auto;
		}
		
		p {
			margin-top: 0;
			text-align: center;
		}
	}
	
	ul {
		margin-top: 0.25rem;
		margin-bottom: 0.25rem;
	}
	
	details {
		background-color: light-dark(#f0f0f0, #202020);
		border-radius: 0.5rem;
		overflow: hidden; /* hides corners in summary */
		
		summary {
			padding: 0.5rem;
			background-color: light-dark(#e0e0e0, #2c2c2c);
			user-select: none;
			-webkit-user-select: none;
		}
		
		&[open] {
			padding-bottom: 0.25rem;
		}
		
		&:not(:last-child) {
			margin-bottom: 0.5rem;
		}
	}
	
	hr {
		/* 20px is half of a ul's padding-inline-start */
		margin-left: 20px;
		margin-right: 20px;
	}
}

@media screen and (width > 90rch) {
	body {
		display: grid;
		grid-template-columns: 1fr min-content 1rem auto 1fr;
		
		max-width: initial; /* we'll do our max-width ourself! */
		margin: 1rem;
	}
	
	#navigation-details {
		grid-column: 2;
		
		&::details-content {
			content-visibility: visible;
		}
		
		& > summary, & > hr {
			display: none;
		}
	}
	
	page-content {
		grid-column: 4;
		
		overflow-x: auto; /* this fixes large tables stretching too far horizontally */
		
		& > *:not(.unlimited-width) {
			box-sizing: border-box; /* include padding for things like ols */
			max-width: 90rch;
		}
		
		& > *:first-child {
			margin-top: 0; /* don't duplicate the body margin */
		}
	}
}

@media screen and (width <= 90rch) {
	#navigation-details {
		& > summary {
			display: block;
			width: 2rem;
			height: 2rem;
			
			img {
				width: 2rem;
				height: 2rem;
			}
			
			&:active {
				filter: opacity(85%);
			}
		}
		
		nav {
			margin-top: 1rem;
			margin-bottom: 1rem;
		}
		
		&[open] {
			position: relative; /* what the summary is positioned relative to */
			
			& > summary {
				/* when open, we don't want to affect the navigation content, so don't float */
				position: absolute;
				top: 0;
				right: 0;
			}
			
			#open-navigation-menu {
				display: none;
			}
		}
		
		&:not([open]) {
			& > summary {
				float: right;
				margin-top: 1rem;
			}
			
			#close-navigation-menu {
				display: none;
			}
		}
	}
}

img {
	image-rendering: crisp-edges;
}

